--- a/app/src/main/res/values-es/strings.xml
+++ b/app/src/main/res/values-es/strings.xml
@@ -1,121 +1,109 @@
+<?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <string name="app_name">Convertidor de Criptomonedas y Divisa</string>
-
-    <string name="update_time">Actualizado:</string>
-    <string name="range1D">24H</string>
-    <string name="range1W">1S</string>
-    <string name="range1M">1M</string>
-    <string name="range6M">6M</string>
-    <string name="range1Y">1A</string>
-    <string name="range3Y">3A</string>
-    <string name="current">Current</string>
-    <string name="avg">Prom</string>
-    <string name="max">Max</string>
-    <string name="min">Min</string>
-    <string name="fluctuation">fluctuación</string>
-    <string name="titleCurrency">Seleccione divisa</string>
-    <string name="titleDetails">Detalles</string>
-    <string name="refresh">Actualizar</string>
-    <string name="share_rewarded">Comparte y gana</string>
-    <string name="search">Buscar</string>
+	<string name="Ok_labe">Aceptar</string>
+	<string name="Themes">CAMBIAR TEMA / COLORES</string>
+	<string name="VIEW_AD_AND_UNLOCK">VER ANUNCIO Y DESBLOQUEAR ESTA CARACTERÍSTICA</string>
+	<string name="add">Añadir</string>
+	<string name="add_currency">Agregar moneda</string>
+	<string name="app_name">Convertidor de criptomonedas</string>
+	<string name="avg">Promedio</string>
+	<string name="below">Debajo de</string>
+	<string name="below_cant_over">La cantidad inferior no puede ser superior a la cantidad superior</string>
+	<string name="cant_save_same_currencies">No puedes programar notificaciones con la misma moneda</string>
+	<string name="choose_email_error">No hay clientes de correo electrónico instalados.</string>
+	<string name="current">Actual</string>
+	<string name="current_price">Precio actual</string>
+	<string name="dialy_notification">Notificación diaria por hora</string>
+	<string name="done">Hecho</string>
+	<string name="edit">Editar</string>
+	<string name="email_optional">Email opcional</string>
+	<string name="empty_notification_center">No tienes ninguna notificación</string>
+	<string name="error_eval">Error. Fórmula inválida</string>
+	<string name="error_internet">Error de conexión. Verifique su conexión a Internet e intente nuevamente</string>
+	<string name="feedback_success">Gracias por sus comentarios, estamos trabajando muy duro para ofrecer la mejor aplicación</string>
+	<string name="fluctuation">fluctuación</string>
+	<string name="followUs">¡Síguenos!</string>
+	<string name="go_premium">HAZTE PREMIUM:\nNOTIFICACIONES, ALERTAS, \n ELIMINAR ANUNCIOS</string>
+	<string name="graph">Graph</string>
+	<string name="have_currency">Lo sentimos, pero ya seleccionó esta moneda, intente con una diferente</string>
+	<string name="mail_support">contact@romerock.com</string>
+	<string name="max">Max</string>
+	<string name="min">Min</string>
+	<string name="need_at_least_2_currencies">Se necesitan al menos 2 monedas para agregar notificaciones</string>
+	<string name="need_hours">Necesita agregar al menos 1 notificación.</string>
+	<string name="no_thanks">No, gracias</string>
+	<string name="notification_center">Centro de notificaciones</string>
+	<string name="notifyMe">Agregar notificaciones</string>
+	<string name="notifyMeChangeCurrency">Notificarme acerca de %s vs %s</string>
+	<string name="oh_oh">Oh oh!</string>
+	<string name="over">Arriba de</string>
+	<string name="over_alert">Alertas por Precio</string>
+	<string name="pay_as_much_you_want">* Compre cualquier paquete y elimine todos los anuncios, y desbloquee todas las funciones de la aplicación para siempre
+* Somos una pequeña empresa, y solo sobrevivimos gracias a su apoyo.
+</string>
+	<string name="play_store_request_fail">Solicitud de Play Store fallida. Los dispositivos Wear pueden no ser compatibles con Play Store, es decir, el dispositivo Wear puede ser la versión 1.0.</string>
+	<string name="pop_up_feedback_tittle">¿Tienes alguna sugerencia?\nEstamos aquí para tí :)</string>
+	<string name="pop_up_get_feedback_content_mail">Deja un comentario</string>
+	<string name="pop_up_get_some_love_content">Si te gusta Conversor de divisas,\nHaznos saber. \ n¡Gracias por tu apoyo!</string>
+	<string name="pop_up_get_some_love_tittle">Por favor califique nuestra aplicación</string>
+	<string name="pop_up_rate_subject">Conversor de divisas - Comentarios - Android</string>
+	<string name="pop_up_share_content">¿Te gusta nuestra aplicación?\n¡Comparte nuestra aplicación en Facebook o Twitter!</string>
+	<string name="pop_up_share_tittle">Comparte con el mundo\ny ser recompensado</string>
+	<string name="price_per_month">%s / mes</string>
+	<string name="privacy_policy">Política de privacidad</string>
+	<string name="range1D">24h</string>
+	<string name="range1M">1M</string>
+	<string name="range1W">1S</string>
+	<string name="range1Y">1A</string>
+	<string name="range3Y">3A</string>
+	<string name="range6M">6M</string>
+	<string name="receive_notification_when_price">Recibir notificación cuando el precio alcance</string>
+	<string name="remove_annoying_ads">Eliminar anuncios molestos</string>
+	<string name="safe_notification">Guardar configuración</string>
+	<string name="search">Buscar</string>
+	<string name="send">Enviar</string>
+	<string name="settings_option_select_lenguage">Seleccione el idioma</string>
+	<string name="settings_option_select_scheme_color">Seleccionar color de la aplicación</string>
+	<string name="settings_preview">Vista Previa</string>
+	<string name="settings_preview_pro_version">VERSIÓN PRO</string>
+	<string name="setup_push_notification">Configurar notificaciones push</string>
+	<string name="subscribeMe">Desencadenantes de precios ilimitados\nNotificaciones</string>
+	<string name="thanks">¡Gracias!</string>
+	<string name="this_feature_is_blocked">Esta característica está bloqueada :(, si apoya a nuestro equipo con algo de amor, habilitaremos esta y otras funciones, y eliminaremos esos molestos anuncios</string>
+	<string name="time_already_scheduled">La hora seleccionada ya está programada</string>
+	<string name="titleCurrency">Seleccione la moneda</string>
+	<string name="titleDetails">Detalles</string>
+	<string name="titleNotificationCenter">Centro de notificaciones</string>
+	<string name="tittle_purchse_finish">Gracias por su compra!</string>
+	<string name="tittle_purchse_finish_error">ERROR. Pago fallido</string>
+	<string name="tryOurFree">PRUEBE NUESTRAS APLICACIONES GRATUITAS</string>
+	<string name="unlimited_hourly">Notificaciones por hora ilimitadas</string>
+	<string name="unlimited_price">Notificaciones ilimitadas por precio</string>
+	<string name="unlock_daylight_theme">Desbloquear tema de luz del día</string>
+	<string name="update_time">Actualizado:</string>
+	<string name="vs">VS</string>
+	<string name="you_will_receive_notification_at">Recibirá la notificación en</string>
+    <string name="share_rewarded">COMPARTE Y OBTENGA RECOMPENSAS</string>
     <string name="Feedback">Comentarios</string>
-    <string name="rateus">Califícanos</string>
-    <string name="Language">Idioma</string>
-    <string name="Themes">CAMBIA COLORES</string>
-    <string name="tryOurFree">OTRAS APPS GRATIS</string>
-    <string name="tipCalculator">Calculadora de propinas</string>
-    <string name="xpressVote">Xpress Vote - Encuestas y sondeos</string>
-    <string name="followUs">Síguenos!</string>
-    <string name="mail_support">contact@romerock.com</string>
-    <string name="badge_settings">BadgeSettings</string>
-    <string name="subscribeMe">Dona y conviértete en Premium</string>
-    <string name="notifyMe">Agregar notificaciones</string>
-    <string name="edit">Editar</string>
-    <string name="add_currency">Agregar moneda</string>
-    <string name="done">Hecho</string>
-    <string name="preferences_name">currencyConverterRomeRock</string>
-    <string name="preferences_defaultCurrencies">defaultCurrencies</string>
-    <string name="have_currency">Lo sentimos, pero ya seleccionó esta moneda, por favor intente con una diferente</string>
-    <string name="graph">Gráfica</string>
-    <string name="error_eval">Error. Fórmula Inválida</string>
-    <string name="no_thanks">No, gracias</string>
-    <string name="pop_up_get_some_love_tittle">¿Nos calificarías\npor favor?</string>
-    <string name="pop_up_get_some_love_content">Si te gustó la calculadora de divisas.\nDéjanos saber. ¡Gracias\npor tu apoyo!</string>
-    <string name="preferences_theme_tittle">themeTittle</string>
-    <string name="preferences_count_some_love">countSomeLove</string>
-    <string name="preferences_rate">rateApp</string>
-    <string name="language_settings">LanguageSettings</string>
-    <string name="pop_up_rate_subject">Currency Converter - Feedback - Android</string>
-    <string name="share_facebook">Compartir en Facebook</string>
-    <string name="share_twitter">Compartir en Twitter</string>
-    <string name="pop_up_share_tittle">Comparte con el mundo\ny gana</string>
-    <string name="pop_up_share_content">¿Te gusta el calculadora de divisas?\n¡Compártela en Facebook o Twitter!</string>
-    <string name="send">Enviar</string>
-    <string name="pop_up_get_feedback_content_mail">Deja tus comentarios</string>
-    <string name="pop_up_feedback_tittle">¿Tienes alguna sugerencia?\nEstamos aquí para servirte :)</string>
-    <string name="settings_option_select_lenguage">Seleccione el idioma</string>
-    <string name="current_price">Precio Actual</string>
-    <string name="choose_email_error">Ningún cliente de correo detectado.</string>
-    <string name="notifyMeChangeCurrency">Notificarme acerca de %s vs %s</string>
-    <string name="price_per_month">%s/Mes</string>
-    <string name="unlimited_hourly">Notificaciones por hora ilimitadas</string>
-    <string name="unlimited_price">Notificaciones Ilimitadas en\ncambio de precio</string>
-    <string name="remove_annoying_ads">Quita anuncios</string>
-    <string name="unlock_daylight_theme">Desbloquea el tema Daylight</string>
-    <string name="go_premium">CONVIERTETE EN PREMIUM:\nNOTIFICACIONES,\nQUITA ANUNCIOS</string>
-    <string name="notification_center">Centro de notificaciones</string>
-    <string name="setup_push_notification">Configurar Notificaciones</string>
-    <string name="vs">VS</string>
-    <string name="dialy_notification">Notificaciones diarias por hora</string>
-    <string name="you_will_receive_notification_at">Recibirás la notificación a las</string>
-    <string name="over_alert">Alertas en Precio Max/Min</string>
-    <string name="over">Arriba de</string>
-    <string name="safe_notification">Guardar configuración</string>
-    <string name="below">Abajo de</string>
-    <string name="add">Agregar</string>
-    <string name="udidAndroid">udidAndroid</string>
-    <string name="purchaseAndroid">purchaseAndroid</string>
-    <string name="purchaseOrder">purchaseOrder</string>
-    <string name="titleNotificationCenter">Centro de notificaciones</string>
-    <string name="time_already_scheduled">El tiempo seleccionado ya está programado</string>   <!-- PPreguntar a partir de aqui abajo -->
-    <string name="fcmUser">fcmUser</string>
-    <string name="need_at_least_2_currencies">Se necesitan al menos 2 monedas para agregar notificaciones</string>
-    <string name="cant_save_same_currencies">No puedes programar notificaciones con la misma divisa</string>
-    <string name="need_hours">Necesita agregar al menos 1 notificación</string>
-    <string name="empty_notification_center">You don’t have any\nnotifications</string>
-    <string name="below_cant_over">El límite inferior no debe ser mayor al limite superior</string>
-    <string name="settings_option_select_scheme_color">Selecciona un Tema</string>
-    <string name="settings_preview">VISTA PREVIA</string>
-    <string name="settings_preview_pro_version">VERSIÓN PRO</string>
-    <string name="share_link">https://goo.gl/EBkFAh</string>
-    <string name="shareAndRewarded">shareAndRewardedPreferences</string>
-    <string name="share_via_twitter">I\'m using #Cypto #Currency  #Converter. Download for #FREE #Android</string>
-    <string name="share_success">Gracias por compartir</string>
-    <string name="quickConverter">Calculadora de unidades de medida</string>
-    <string name="preferences_check_inventory">preferencesCheckInventory</string>
-    <string name="tittle_purchse_finish">Gracias por tu compra!</string>
-    <string name="tittle_purchse_finish_error">ERROR. Pago fallido</string>
-    <string name="Ok_labe">Ok</string>
-    <string name="receive_notification_when_price">Recibir notificación cuando el precio llegue a</string>
-    <string name="Play_Store_Request_Wear">Solicitud Play Store para usar el dispositivo con éxito.</string>
-    <string name="play_store_request_fail">La solicitud de Play Store falló. Los dispositivos de desgaste pueden no ser compatibles con Play Store, es decir, el dispositivo de desgaste puede ser la versión 1.0.</string>
-    <string name="loanCalculator">Calculadora de Préstamos</string>
-    <string name="salestax">Calculadora de Descuentos</string>
-    <string name="feedback_success">Gracias por tus comentarios, estamos trabajando muy duro para ofrecerte la mejor aplicación</string>
-    <string name="error_internet">Error conexión. Por favor, compruebe su conexión a Internet y vuelva a intentarlo</string>
-    <string name="privacy_policy">Política de Privacidad</string>
-    <string name="privacy_policy_url">https://apps.romerock.com/foreign-exchange-converter/privacy-policy/</string>
-    <string name="dateForInterstitial">dateForInterstitial</string>
-    <string name="email_optional">Email - Opcional</string>
-    <string name="thanks">Gracias!</string>
-    <string name="label_52Challenge">Reto de Ahorro de Dinero</string>
-    <string name="label_clashMate">Clash Mate: Herramientas y más</string>
-    <string name="preferences_topic">preferences_topic</string>
-    <string name="pay_as_much_you_want">* Paga todo lo que quieras por la versión premium.\n* Somos una empresa pequeña y sólo sobrevivimos gracias a tú apoyo.</string>
-    <string name="preferences_count_keys">preferences_count_keys</string>
-    <string name="preferences_defaultCurrencies_first_time">preferences_defaultCurrencies_first_time</string>
-    <string name="preferences_interstitial_count">preferences_interstitial_count</string>
-    <string name="VIEW_AD_AND_UNLOCK">VIEW AD AND UNLOCK THIS FEATURE</string>
-    <string name="donate_us">Donate us</string>
-    <string name="this_feature_is_blocked">This feature is blocked :(, if you support our team with some love, we will enable this and other functions, and we will remove those annoying ads</string>
+    <string name="rateus">Califica la aplicación</string>
+	<string name="Language">Idioma</string>
+	<string name="shareTwitter">Estoy usando #Brawlmate. Descargar #FREE #iOS #Android</string>
+	<string name="share_success">Gracias por compartir.\nLos anuncios han sido eliminados</string>
+	<string name="label_quickConverter">Convertidor de unidades</string>
+	<string name="label_loanCalculator">Calculadora de Préstamos</string>
+	<string name="label_salestax">Calculadora de impuestos y descuentos</string>
+	<string name="label_52Challenge">Desafío de ahorro de dinero</string>
+	<string name="label_clashmate">Compañero de "Clash Royale"</string>
+	<string name="German">alemán</string>
+	<string name="English">Inglés</string>
+	<string name="Spanish">Español</string>
+	<string name="French">Frances</string>
+	<string name="Italian">Italiano</string>
+	<string name="Japanese">Japones</string>
+	<string name="Portuguese">Portugues</string>
+	<string name="Russian">Ruso</string>
+	<string name="label_tipCalculator">Calculadora de propinas</string>
+	<string name="label_xpressVote">"Xpress Vote" - Encuestas y Sondeos</string>
+	<string name="share_on_facebook">Compartir en Facebook</string>
+	<string name="share_on_twitter">Compartir en Twitter</string>
 </resources>
