--- a/app/src/main/res/values-fr/strings.xml
+++ b/app/src/main/res/values-fr/strings.xml
@@ -1,135 +1,109 @@
+<?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <string name="app_name">Convertisseur de Cryptomonnaie et Devise</string>
-    <string name="banner_ad_unit_id">ca-app-pub-1943700858932247/4609978137</string>
-    <string name="interstitial_ad_unit_id">ca-app-pub-1943700858932247/4683373591</string>
-    <string name="banner_ad_unit_id_big">ca-app-pub-1943700858932247/6248330570</string>
-    <string name="follow_us_twitter">https://twitter.com/RomeRock_Apps</string>
-    <string name="follow_us_twitter_profile">twitter://user?screen_name=RomeRock_Apps</string>
-    <string name="facebook_app_id">2292294817451565</string>
-    <string name="follow_us_instagram">https://www.instagram.com/romerock_apps/</string>
-    <string name="link_tipCalculator">https://play.google.com/store/apps/details?id=com.romerock.apps.utilities.tipcalculator&#38;utm_source=currencyconverter&#38;utm_medium=share&#38;utm_campaign=app</string>
-    <string name="link_xpressVote">https://play.google.com/store/apps/details?id=com.romerock.apps.utilities.xpressvote&#38;utm_source=currencyconverter&#38;utm_medium=share&#38;utm_campaign=app </string>
-    <string name="link_quickConverter">https://play.google.com/store/apps/details?id=com.romerock.apps.utilities.quickunitconverter&#38;utm_source=currencyconverter&#38;utm_medium=share&#38;utm_campaign=app </string>
-    <string name="link_LoanCalulator">https://play.google.com/store/apps/details?id=com.romerock.apps.utilities.loancalculator&#38;utm_source=currencyconverter&#38;utm_medium=share&#38;utm_campaign=app </string>
-    <string name="link_TaxCalculator">https://play.google.com/store/apps/details?id=com.romerock.apps.utilities.salestaxdiscountcalculator&#38;utm_source=currencyconverter&#38;utm_medium=share&#38;utm_campaign=app</string>
-    <string name="link_ClashMate">https://play.google.com/store/apps/details?id=com.romerock.apps.utilities.clashroyale.tournamentfinder&#38;utm_source=currencyconverter&#38;utm_medium=share&#38;utm_campaign=app</string>
-    <string name="link_52Weeks">https://play.google.com/store/apps/details?id=com.romerock.apps.utilities.fiftytwoweekchallenge&#38;utm_source=currencyconverter&#38;utm_medium=share&#38;utm_campaign=app</string>
-    <string name="follow_us_facebook">https://www.facebook.com/RomeRock-App-Studio-337180269970605</string>
-    <string name="follow_us_facebook_profile">fb://page/337180269970605</string>
-    <string name="link_twittter">https://www.twitter.com/RomeRock_Apps</string>
-    <string name="update_time">À jour:</string>
-    <string name="range1D">24H</string>
-    <string name="range1W">1S</string>
-    <string name="range1M">1M</string>
-    <string name="range6M">6M</string>
-    <string name="range1Y">1A</string>
-    <string name="range3Y">3Y</string>
-    <string name="current">Actuel</string>
-    <string name="avg">Moy</string>
-    <string name="max">Max</string>
-    <string name="min">Min</string>
-    <string name="fluctuation">fluctuation</string>
-    <string name="titleCurrency">Sélectionnez la devise</string>
-    <string name="titleDetails">Détails</string>
-    <string name="search">Chercher</string>
-    <string name="share_rewarded">Partagez et etre récompensé</string>
+	<string name="Ok_labe">Acceptez</string>
+	<string name="Themes">CHANGER DE THÈME / COULEURS</string>
+	<string name="VIEW_AD_AND_UNLOCK">VOIR L\'ANNONCE ET DÉVERROUILLER CETTE FONCTION</string>
+	<string name="add">Ajouter</string>
+	<string name="add_currency">Ajouter une devise</string>
+	<string name="app_name">Convertisseur de crypto-monnaie</string>
+	<string name="avg">Moyen</string>
+	<string name="below">Sous</string>
+	<string name="below_cant_over">Le montant inférieur ne peut pas être supérieur au montant excédentaire</string>
+	<string name="cant_save_same_currencies">Vous ne pouvez pas programmer de notifications avec la même devise</string>
+	<string name="choose_email_error">Il n\'y a pas de clients de messagerie installés.</string>
+	<string name="current">Actuelle</string>
+	<string name="current_price">Prix actuel</string>
+	<string name="dialy_notification">Notification quotidienne par heure</string>
+	<string name="done">Terminé</string>
+	<string name="edit">modifier</string>
+	<string name="email_optional">Email - optionnel</string>
+	<string name="empty_notification_center">Vous n\'avez aucune notification</string>
+	<string name="error_eval">Erreur. Formule invalide</string>
+	<string name="error_internet">Erreur de connexion. S\'il vous plaît, vérifiez votre connexion à internet et réessayez</string>
+	<string name="feedback_success">Merci pour vos commentaires, nous travaillons très dur pour offrir la meilleure application</string>
+	<string name="fluctuation">fluctuation</string>
+	<string name="followUs">Suivez nous!</string>
+	<string name="go_premium">PASSER EN PREMIUM:\nNOTIFICATIONS, ALERTES, \n ENLEVER LES ANNONCES</string>
+	<string name="graph">Graph</string>
+	<string name="have_currency">Désolé, mais vous avez déjà sélectionné cette devise, veuillez en essayer une autre.</string>
+	<string name="mail_support">contact@romerock.com</string>
+	<string name="max">Max</string>
+	<string name="min">Min</string>
+	<string name="need_at_least_2_currencies">Au moins 2 devises sont nécessaires pour ajouter des notifications</string>
+	<string name="need_hours">Vous devez ajouter au moins 1 notification.</string>
+	<string name="no_thanks">Non merci</string>
+	<string name="notification_center">Centre de notification</string>
+	<string name="notifyMe">Ajouter des notifications</string>
+	<string name="notifyMeChangeCurrency">M\'avertir de %s vs %s</string>
+	<string name="oh_oh">Oh oh!</string>
+	<string name="over">Dessus</string>
+	<string name="over_alert">Alertes de prix</string>
+	<string name="pay_as_much_you_want">* Achetez n\'importe quel forfait, supprimez toutes les annonces et déverrouillez toutes les fonctionnalités de l\'application pour toujours
+* Nous sommes une toute petite entreprise et nous ne survivons que grâce à votre soutien.
+</string>
+	<string name="play_store_request_fail">La demande au Play Store a échoué. Les appareils Wear peuvent ne pas prendre en charge le Play Store, c’est-à-dire que l’appareil Wear peut être de version 1.0.</string>
+	<string name="pop_up_feedback_tittle">Avez-vous une suggestion?\nNous sommes là pour vous :)</string>
+	<string name="pop_up_get_feedback_content_mail">laissez un commentaire</string>
+	<string name="pop_up_get_some_love_content">Si vous aimez le convertisseur de devises,\nlaissez nous savoir. \ nMerci pour votre soutien!</string>
+	<string name="pop_up_get_some_love_tittle">S\'il vous plaît noter notre application</string>
+	<string name="pop_up_rate_subject">Convertisseur de devises - Commentaires - Android</string>
+	<string name="pop_up_share_content">Aimez-vous notre application?\nPartagez notre application sur Facebook ou Twitter !!</string>
+	<string name="pop_up_share_tittle">Partager avec le monde\net être récompensé</string>
+	<string name="price_per_month">%s / mois</string>
+	<string name="privacy_policy">Politique de confidentialité</string>
+	<string name="range1D">24H</string>
+	<string name="range1M">1M</string>
+	<string name="range1W">1S</string>
+	<string name="range1Y">1A</string>
+	<string name="range3Y">3A</string>
+	<string name="range6M">6M</string>
+	<string name="receive_notification_when_price">Recevoir une notification lorsque le prix atteint</string>
+	<string name="remove_annoying_ads">Supprimer les publicités agaçantes</string>
+	<string name="safe_notification">Enregistrer la configuration</string>
+	<string name="search">Chercher</string>
+	<string name="send">Envoyer</string>
+	<string name="settings_option_select_lenguage">Choisir la langue</string>
+	<string name="settings_option_select_scheme_color">Sélectionnez la couleur de l\'application</string>
+	<string name="settings_preview">Aperçu</string>
+	<string name="settings_preview_pro_version">VERSION PRO</string>
+	<string name="setup_push_notification">Configurer les notifications push</string>
+	<string name="subscribeMe">Déclencheurs de prix illimités\nLes notifications</string>
+	<string name="thanks">Merci!</string>
+	<string name="this_feature_is_blocked">Cette fonctionnalité est bloquée :( si vous soutenez notre équipe avec un peu d\'amour, nous activerons cela, ainsi que d\'autres fonctions, et nous supprimerons ces publicités gênantes.</string>
+	<string name="time_already_scheduled">L\'heure sélectionnée est déjà programmée</string>
+	<string name="titleCurrency">Sélectionnez la devise</string>
+	<string name="titleDetails">Détails</string>
+	<string name="titleNotificationCenter">Centre de notification</string>
+	<string name="tittle_purchse_finish">Merci pour votre achat!</string>
+	<string name="tittle_purchse_finish_error">ERREUR. Paiement échoué</string>
+	<string name="tryOurFree">ESSAYEZ NOS APPLICATIONS GRATUITES</string>
+	<string name="unlimited_hourly">Notifications horaires illimitées</string>
+	<string name="unlimited_price">Notifications illimitées par prix</string>
+	<string name="unlock_daylight_theme">Déverrouiller le thème lumière du jour</string>
+	<string name="update_time">Mis à jour:</string>
+	<string name="vs">VS</string>
+	<string name="you_will_receive_notification_at">Vous recevrez la notification à</string>
+    <string name="share_rewarded">PARTAGEZ ET RECONNAISSEZ</string>
     <string name="Feedback">Commentaires</string>
-    <string name="rateus">Évaluez nous</string>
-    <string name="Language">Langue</string>
-    <string name="Themes">CHANGER COULEURS</string>
-    <string name="tryOurFree">AUTRES APPLICATIONS GRATUITES</string>
-    <string name="tipCalculator">Calculatrice de Pourboire</string>
-    <string name="xpressVote">Xpress Vote - Enquêtes et sondages</string>
-    <string name="followUs">Suivez nous!</string>
-    <string name="mail_support">contact@romerock.com</string>
-    <string name="badge_settings">BadgeSettings</string>
-    <string name="subscribeMe">Faire un don et devenez Premium</string>
-    <string name="notifyMe">Ajouter des notifications</string>
-    <string name="edit">Modifier</string>
-    <string name="add_currency">Ajouter une Monnaie</string>
-    <string name="done">Finir</string>
-    <string name="preferences_name">currencyConverterRomeRock</string>
-    <string name="preferences_defaultCurrencies">defaultCurrencies</string>
-    <string name="have_currency">Désolé, mais vous avez déjà sélectionné cette devise. Essayez avec une devise différente</string>
-    <string name="graph">Graphe</string>
-    <string name="error_eval">Erreur. Formule invalide</string>
-    <string name="no_thanks">Non merci</string>
-    <string name="pop_up_get_some_love_tittle">Vous nous évalueriez\nS\'il vous plait?</string>
-    <string name="pop_up_get_some_love_content">Si vous avez aimé la calculatrice,\nLaissez nous savoir.\nMerci pour votre soutien!</string>
-    <string name="preferences_theme_tittle">themeTittle</string>
-    <string name="preferences_count_some_love">countSomeLove</string>
-    <string name="preferences_rate">rateApp</string>
-    <string name="language_settings">LanguageSettings</string>
-    <string name="pop_up_rate_subject">Currency Converter - Feedback - Android</string>
-    <string name="share_facebook">Partagez sur Facebook</string>
-    <string name="share_twitter">Partagez sur Twitter</string>
-    <string name="pop_up_share_tittle">Partagez et\nétre Récompensé</string>
-    <string name="pop_up_share_content">Vous Aimez la calculatrice de Monnaie?\nPartagez-le sur Facebook ou Twitter</string>
-    <string name="send">Envoyer</string>
-    <string name="pop_up_get_feedback_content_mail">Laissez-nous vos commentaires</string>
-    <string name="pop_up_feedback_tittle">Avez-vous des suggestions?\nNous sommes là pour vous servir :)</string>
-    <string name="settings_option_select_lenguage">Choisir la langue</string>
-    <string name="current_price">Prix Actuel</string>
-    <string name="choose_email_error">Aucun client de messagerie n\'a été détecté.</string>
-    <string name="notifyMeChangeCurrency">Envoie-moi notifications %s vs %s</string>
-    <string name="price_per_month">%s/Moins</string>
-    <string name="unlimited_hourly">Notifications illimitées par heure</string>
-    <string name="unlimited_price">Notifications d\'après prix\nillimités</string>
-    <string name="remove_annoying_ads">Supprimez les publicités</string>
-    <string name="unlock_daylight_theme">Débloquer le thème Daylight</string>
-    <string name="go_premium">DEVENIR PREMIUM:\nNOTIFICATIONS,\nSUPPRIMEZ LA PUB</string>
-    <string name="notification_center">Centre de Notifications</string>
-    <string name="setup_push_notification">Configurer les notifications</string>
-    <string name="vs">VS</string>
-    <string name="dialy_notification">Notifications chaque jour par heure</string>
-    <string name="you_will_receive_notification_at">Recevrez la notification à</string>
-    <string name="over_alert">Alertes dans prix max/min</string>
-    <string name="over">Au Dessus de</string>
-    <string name="safe_notification">Enregistrer la configuration</string>
-    <string name="below">Dessus de</string>
-    <string name="add">Ajouter</string> <!-- no estaba en frances es correcto -->
-    <string name="udidAndroid">udidAndroid</string>
-    <string name="purchaseAndroid">purchaseAndroid</string>
-    <string name="purchaseOrder">purchaseOrder</string>
-    <string name="titleNotificationCenter">Centre de Notifications</string>
-    <string name="time_already_scheduled">Le temps est déjà sélectionné</string>
-    <string name="fcmUser">fcmUser</string>
-    <string name="need_at_least_2_currencies">Au moins 2 devises sont nécessaires pour ajouter des notifications</string>
-    <string name="cant_save_same_currencies">Vous ne pouvez pas planifier des notifications avec la même devise</string>
-    <string name="need_hours">Vous devez ajouter au moins 1 notification</string>
-    <string name="empty_notification_center">Vous n\'avez aucune\nnotification</string>
-    <string name="below_cant_over">Le montant ci-dessous ne peut pas être supérieur au montant supérieur</string>
-    <string name="settings_option_select_scheme_color">Sélectionnez un thème</string>
-    <string name="settings_preview">APERÇU</string>
-    <string name="settings_preview_pro_version">VERSION PRO</string>
-    <string name="share_link">https://goo.gl/EBkFAh</string>
-    <string name="shareAndRewarded">shareAndRewardedPreferences</string>
-    <string name="share_via_twitter">I\'m using #Cypto #Currency  #Converter. Download for #FREE #Android</string>
-    <string name="share_success">Merci pour partager</string>
-    <string name="quickConverter">Calculateur d\'Unités de mesure</string>
-    <string name="preferences_check_inventory">preferencesCheckInventory</string>
-    <string name="tittle_purchse_finish">Merci pour votre achat!</string>
-    <string name="tittle_purchse_finish_error">ERREUR. Paiement échoué</string>
-    <string name="Ok_labe">Ok</string>
-    <string name="receive_notification_when_price">Recevoir une notification lorsque le prix atteint</string>
-    <string name="Play_Store_Request_Wear">Play Store Demande de port de l\'appareil réussi</string>
-    <string name="play_store_request_fail">La demande de lecture du magasin a échoué. Les appareils d\'usure peuvent ne pas prendre en charge Play Store, c\'est-à-dire que le périphérique Wear peut être la version 1.0.</string>
-    <string name="loanCalculator">Calculateur de prêts</string>
-    <string name="salestax">Calculatrice de réductions</string>
-    <string name="feedback_success" >Merci pour vos commentaires, nous travaillons vraiment dur pour vous offrir la meilleure application</string>
-    <string name="error_internet">Erreur de connexion. S\'il vous plaît, vérifiez votre connexion à internet et réessayez</string>
-    <string name="privacy_policy">politique de confidentialité</string>
-    <string name="privacy_policy_url">https://apps.romerock.com/foreign-exchange-converter/privacy-policy/</string>
-    <string name="dateForInterstitial">dateForInterstitial</string>
-    <string name="email_optional">Email - Optionnel</string>
-    <string name="thanks">Merci!</string>
-    <string name="label_52Challenge">Défi Économies d\'argent</string>
-    <string name="label_clashMate">Clash Mate: Stats &amp; Outils</string>
-    <string name="preferences_topic">preferences_topic</string>
-    <string name="pay_as_much_you_want">* Payez autant que vous voulez pour la version premium.\n* Nous sommes une entreprise petite et nous ne pouvons survivre que grâce à votre soutien c:</string>
-    <string name="preferences_count_keys">preferences_count_keys</string>
-    <string name="preferences_defaultCurrencies_first_time">preferences_defaultCurrencies_first_time</string>
-    <string name="preferences_interstitial_count">preferences_interstitial_count</string>
-    <string name="donate_us">Donate us</string>
-    <string name="this_feature_is_blocked">This feature is blocked :(, if you support our team with some love, we will enable this and other functions, and we will remove those annoying ads</string>
+    <string name="rateus">Évaluer l\'application</string>
+	<string name="Language">La langue</string>
+	<string name="shareTwitter">J\'utilise #Brawlmate. Télécharger #FREE #iOS #Android</string>
+	<string name="share_success">Merci d\'avoir partagé.\nLes annonces ont été supprimées</string>
+	<string name="label_quickConverter">Convertisseur d\'unité</string>
+	<string name="label_loanCalculator">Calculatrice de prêts</string>
+	<string name="label_salestax">Calculateur de taxes et réductions</string>
+	<string name="label_52Challenge">Défi d\'économie d\'argent</string>
+	<string name="label_clashmate">Compagnon de "Clash Royale"</string>
+	<string name="German">allemand</string>
+	<string name="English">Anglais</string>
+	<string name="Spanish">Espanol</string>
+	<string name="French">français</string>
+	<string name="Italian">italien</string>
+	<string name="Japanese">Japonais</string>
+	<string name="Portuguese">Portugais</string>
+	<string name="Russian">russe</string>
+	<string name="label_tipCalculator">Calculateur de pourboire</string>
+	<string name="label_xpressVote">"Vote Xpress" - Enquêtes et sondages</string>
+	<string name="share_on_facebook">Partager sur Facebook</string>
+	<string name="share_on_twitter">Partager sur Twitter</string>
 </resources>
